# multi_app

./: .gitignore  LICENSE  README.md  converter.py  gui.py  main.py  multi_app.spec  pyproject.toml  requirements.txt  setup.py  teste2222
scripts/: build_appimage.sh  build_executable.sh
src/multi_app/: __main__.py  converter.py  gui.py  main.py
